# AuraBot

./: .gitignore  Cargo.toml
migrations/: 20250407090034_create_users_table.sql  20250407090424_create_goals_table.sql  20250407091245_create_current_table.sql  20250410190706_create_channels_table.sql
src/: lib.rs  main.rs
src/bot/: mod.rs
src/bot/commands/: anonimo.rs  canal.rs  definircanais.rs  definircanal.rs  definirmeta.rs  info.rs  meta.rs  mod.rs  setcanais.rs  setmeta.rs
src/bot/components/: button_aprove.rs  button_deny.rs  buttons_meta.rs  mod.rs  modal_goal.rs
src/bot/events/: interaction_create.rs  mod.rs  ready.rs
src/bot/handlers/: command.rs
src/bot/models/: client.rs  intents.rs  mod.rs
src/bot/utils/: logs.rs  mod.rs
src/db/: mod.rs  queries.rs
src/db/models/: channels.rs  goal.rs  mod.rs  repository.rs
src/db/queries/: channels.rs  meta.rs  mod.rs  user.rs
src/scheduler/: mod.rs  reminder.rs
